src/components/shared/ui/SocialLoginButton/SocialLoginButton.module.css
.button {
    width: 100%; 
    min-width: 209px; 
    height: 54px;
    gap: 8px;
    border-radius: 7px;
    border: 1px solid #00000099;
    background: #FCFCFC;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    transition: background-color 0.3s ease, border-color 0.3s ease;
}

.button:hover {
    background-color: #f0f0f09f;
    border-color: #000000;
}

.text {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    line-height: 21px;
    letter-spacing: -0.02em;
}

